Feat/Refactor: descarga de archivos y extracción de lógica de inicio
- FileTransferService ahora implementa MensajeListener: ensambla chunks recibidos y permite descargarlos
- DialogArchivos agrega botón "Descargar" y doble clic para guardar el archivo seleccionado
- VentanaReunion registra/desregistra fileTransferService como listener del ciclo de vida
- App.java delega a WindowsRelaunch y EntornoApp (nuevas clases) para separar responsabilidades de arranque

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>